manual: Add Maven wrapper and fixup pom.xml